# App

./: CMakeLists.txt  main.cpp  wmain.cpp  wmain.h  wmain.ui  wmanage.cpp  wmanage.h  wmanage.ui
backend/: Dockerfile  docker-compose.yml  package-lock.json  package.json
backend/src/: index.ts
backend/src/controllers/: collection-controller.ts  script-controller.ts  user-controller.ts
backend/src/dtos/: collection-dto.ts  script-dto.ts  user-dto.ts
backend/src/exceptions/: api-error.ts
backend/src/interfaces/: requestWithUser.interface.ts
backend/src/middlewares/: auth-middleware.ts  error-middleware.ts
backend/src/models/: collection-model.ts  script-model.ts  token-model.ts  user-model.ts
backend/src/router/: index.ts
backend/src/service/: collection-service.ts  script-service.ts  token-service.ts  user-service.ts
src/: customitem.cpp  customitem.h  customitem.ui  executor.cpp  executor.h  pyloader.cpp  pyloader.h
src/window/: progress.h  progress.ui
